Fix modal z-index

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html, body {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
